--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>⚙ TECHNOLOGY IH</title>
-    <link href="css/mypage.css" rel="stylesheet">
+    <link href="mypage.css" rel="stylesheet">
 </head>
 <body>
     <header id="header">
