--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <p>If you have any questions, feel free to contact us:</p>
             <ul>
                 <li><strong>Email:</strong> <a href="mailto:technology.ih.cloud@gmail.com">technology.ih.cloud@gmail.com</a></li>
-                <li><strong>Phone:</strong> <a href="tel:+055050698">055050698</a></li>
+                <li><strong>Phone:</strong> <a href="tel:+055050698">+374-**-**-** </a></li>
                 <li><strong>Address:</strong> Erevan, Armenia</li>
             </ul>
         </section>
